--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "background_color": "#2196f3",
   "display": "fullscreen",
   "orientation": "portrait",
-  "Scope": "/",
+  "Scope": "/ampwa-notification",
   "start_url": "/index.html",
   "icons": [
     {
